--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,20 @@
-<p>
-  dashboard works!
-</p>
+<div class="container">
+    <div class="row main-board">
+        <div class="col">
+            <div class="main-text"><span class="bold-text">Hi</span>, <br> My name is <span class="bold-text">Klaudia Szumacher</span>
+            </div>
+            <div class="main-text">I design and paint</div>
+            <div class="main-text" id="last"><span class="bold-text">Let me show You...</span></div>
+        </div>
+        <div align="right" class="col">
+            <img class="logo" src="./assets/logo.svg" alt="">
+        </div>
+    </div>
+    <div class="row lastRow">
+        <div class="col"></div>
+        <div class="col">
+            <div class="navButtonDown" [routerLink]="['/portfolio']"></div>
+        </div>
+    </div>
+    <div class="col"></div>
+</div>
