--- a/src/app/portfolio/bh2/bh2.component.html
+++ b/src/app/portfolio/bh2/bh2.component.html
@@ -1,3 +1,35 @@
-<p>
-  bh2 works!
-</p>
+<div class="row">
+    <div class="col col-sm">
+        <div class="row">
+            <img class="watermark" src="assets/logo.svg" alt="">
+        </div>
+        <div class="row">
+            <img class="koszulka" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">
+        </div>
+    </div>
+    <div class="col col-sm">
+        <div class="row">
+            <img class="koszulka" src="assets/3%20bh2/scrum.svg" alt="">
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="title-subpage">BOOST HIGH</div>
+                </div>
+                <div class="row">
+                    <div class="description">logo&brand</div>
+                </div>
+                <div class="row">
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis deserunt dicta
+                        dolore eaque eos et ex explicabo fugiat in labore laborum molestias necessitatibus odio placeat,
+                        quae, sint suscipit voluptatem voluptates.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col col-sm">
+        <img class="koszulka szara" src="assets/3%20bh2/koszulka.png" alt="">
+
+    </div>
+</div>
