--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -1,3 +1,35 @@
-<p>
-  grafit works!
-</p>
+<div class="bg">
+    <div class="row">
+        <div class="col-6">
+            <img class="watermark" src="assets/logo.svg" alt="">
+            <img class="img-fluid" src="assets/1%20grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
+        </div>
+        <div class="col-6">
+            <div class="row">
+                <div class="col-10">
+                    <div class="row">
+                        <div class="title-subpage">GrafIT</div>
+                    </div>
+                    <div class="row">
+                        <div class="description">logo&brand</div>
+                    </div>
+                    <div class="row">
+                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, culpa
+                            laudantium nemo nihil
+                            officia officiis placeat possimus praesentium repellendus tempora. A aliquid cumque nam
+                            optio provident,
+                            voluptatibus. Dolorum, perferendis provident!
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <img class="grafit-logo" src="/assets/1%20grafit/logo%20grafit.svg" alt="">
+                </div>
+
+            </div>
+            <div class="row">
+                <img class="img-fluid" id="grafit-mock" src="assets/1%20grafit/grafit%20szyld.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</div>
