dodanie animacji przejścia

--- a/src/app/portfolio/swist/swist.component.html
+++ b/src/app/portfolio/swist/swist.component.html
@@ -1,3 +1,33 @@
-<p>
-  swist works!
-</p>
+<div class="row">
+    <div class="col-6">
+        <div class="row">
+            <img class="watermark" src="assets/logo.svg" alt="">
+        </div>
+        <div class="row">
+            <img class="logo-swist" src="assets/4_swist/logo_swist.svg" alt="">
+        </div>
+        <div class="row">
+            <div class="col">
+                <img class="rapee" src="assets/4_swist/swist_latawiec.png" alt="">
+            </div>
+            <div class="col">
+                <img class="rapee" src="assets/4_swist/swist_uboze.png" alt="">
+            </div>
+            <div class="col">
+                <img class="rapee" src="assets/4_swist/swist_wila.png" alt="">
+            </div>
+            <div class="col">
+                <img class="rapee" src="assets/4_swist/swist_jaga.png" alt="">
+            </div>
+        </div>
+
+        <div class="row"></div>
+    </div>
+    <div class="col-6 swist-bg">
+        <div class="row">
+            <div class="text-content">
+                <div class="titile-subpage">Świst</div>
+            </div>
+        </div>
+    </div>
+</div>
