--- a/src/app/portfolio/bh1/bh1.component.html
+++ b/src/app/portfolio/bh1/bh1.component.html
@@ -27,6 +27,9 @@
         </div>
     </div>
     <div class="col-9">
-        <img id="boosthigh1" src="assets/2%20bh1/boost%20hight%20identity.jpg" alt="">
+        <div class="image-wrapper">
+
+        <img class="img-fluid animation" id="boosthigh1" src="assets/2%20bh1/boost%20hight%20identity.jpg" alt="">
+        </div>
     </div>
 </div>
