--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -2,7 +2,9 @@
     <div class="row">
         <div class="col-6">
             <img class="watermark" src="assets/logo.svg" alt="">
-            <img class="img-fluid" src="assets/1%20grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
+            <div class="image-wrapper">
+                <img class="img-fluid animation" src="./../../../assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
+            </div>
         </div>
         <div class="col-6">
             <div class="row">
@@ -23,12 +25,14 @@
                     </div>
                 </div>
                 <div class="col-2">
-                    <img class="grafit-logo" src="/assets/1%20grafit/logo%20grafit.svg" alt="">
+                    <img class="grafit-logo" src="./../../../assets/1_grafit/logo%20grafit.svg" alt="">
                 </div>
 
             </div>
             <div class="row">
-                <img class="img-fluid" id="grafit-mock" src="assets/1%20grafit/grafit%20szyld.jpg" alt="">
+                <div class="image-wrapper">
+                    <img class="img-fluid animation" id="grafit-mock" src="./../../../assets/1_grafit/grafit%20szyld.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
