--- a/src/app/portfolio/bh2/bh2.component.html
+++ b/src/app/portfolio/bh2/bh2.component.html
@@ -4,7 +4,9 @@
             <img class="watermark" src="assets/logo.svg" alt="">
         </div>
         <div class="row">
-            <img class="koszulka" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">
+            <div class="image-wrapper">
+            <img class="koszulka img-fluid animation" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">
+            </div>
         </div>
     </div>
     <div class="col col-sm">
@@ -29,7 +31,9 @@
         </div>
     </div>
     <div class="col col-sm">
-        <img class="koszulka szara" src="assets/3%20bh2/koszulka.png" alt="">
+        <div class="image-wrapper">
+        <img class="koszulka szara img-fluid animation" src="assets/3%20bh2/koszulka.png" alt="">
+        </div>
 
     </div>
 </div>
