--- a/src/app/portfolio/grafit/grafit.component.css
+++ b/src/app/portfolio/grafit/grafit.component.css
@@ -1,6 +1,6 @@
 .bg {
     /* The image used */
-    background-image: url("src/assets/fire_bg.png");
+    background-image: url("../../../assets/1_grafit/fire_bg.png");
     /* Full height */
     height: 100%;
     /* Center and scale the image nicely */
