dodanie animacji przejścia

--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -3,7 +3,7 @@
         <div class="col-6">
             <img class="watermark" src="assets/logo.svg" alt="">
             <div class="image-wrapper">
-                <img class="img-fluid animation" src="./../../../assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
+                <img class="img-fluid animation" src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
             </div>
         </div>
         <div class="col-6">
@@ -25,13 +25,13 @@
                     </div>
                 </div>
                 <div class="col-2">
-                    <img class="grafit-logo" src="./../../../assets/1_grafit/logo%20grafit.svg" alt="">
+                    <img class="grafit-logo" src="assets/1_grafit/logo%20grafit.svg" alt="">
                 </div>
 
             </div>
             <div class="row">
                 <div class="image-wrapper">
-                    <img class="img-fluid animation" id="grafit-mock" src="./../../../assets/1_grafit/grafit%20szyld.jpg" alt="">
+                    <img class="img-fluid animation" id="grafit-mock" src="assets/1_grafit/grafit%20szyld.jpg" alt="">
                 </div>
             </div>
         </div>
