Poprawa nazewnictwa plików, dodanie kolejnych stron

--- a/src/app/o-mnie/o-mnie.component.html
+++ b/src/app/o-mnie/o-mnie.component.html
@@ -1,3 +1,35 @@
-<p>
-  o-mnie works!
-</p>
+<div class="about-me-bg">
+    <div class="row">
+        <div class="col-2">
+            <img class="watermark" src="assets/logo.svg" alt="">
+
+        </div>
+        <div class="col col-sm">
+            <div class="container" class="about-me">
+                <div class="row">
+                    <h2>O mnie</h2>
+                </div>
+                <div class="text text-about-me">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque, eveniet, excepturi incidunt
+                        iure minima nobis nulla quasi repellendus reprehenderit similique sint voluptates voluptatum.
+                        Consectetur, eius similique! Debitis, dicta, necessitatibus?</p>
+                </div>
+            </div>
+        </div>
+        <div class="col col-sm">
+            <div class="container" class="about-me">
+
+                <div class="row">
+                    <h2>skontaktuj się ze mną</h2>
+                </div>
+                <div class="text text-about-me">
+                    513-738-040
+                </div>
+                <div class="text text-about-me">
+                    szumacher.klaudia@gmail.com
+                </div>
+            </div>
+        </div>
+        <div class="col-2"></div>
+    </div>
+</div>
