--- a/src/app/portfolio/gaia-tree/gaia-tree.component.html
+++ b/src/app/portfolio/gaia-tree/gaia-tree.component.html
@@ -1,3 +1,36 @@
-<p>
-  gaia-tree works!
-</p>
+<div class="row">
+    <div class="col-5">
+        <img class="watermark" src="assets/logo.svg" alt="">
+        <div class="row">
+            <div class="col">
+
+                <div class="image-wrapper">
+                    <img id="gaia-logo" src="assets/7_gaiatree/logo_gaiatree_1.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-2">
+        <div class="gaia-bg"></div>
+    </div>
+    <div class="col-5">
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="title-subpage">GaiaTree</div>
+                </div>
+                <div class="row">
+                    <div class="description">logo</div>
+                </div>
+                <div class="row">
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, culpa
+                        laudantium nemo nihil
+                        officia officiis placeat possimus praesentium repellendus tempora. A aliquid cumque nam
+                        optio provident,
+                        voluptatibus. Dolorum, perferendis provident!
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
