--- a/src/app/portfolio/skrybe/skrybe.component.html
+++ b/src/app/portfolio/skrybe/skrybe.component.html
@@ -1,3 +1,35 @@
-<p>
-  skrybe works!
-</p>
+<div class="row">
+        <div class="col-6">
+            <img class="watermark" src="assets/logo.svg" alt="">
+            <div class="image-wrapper">
+                <img class="img-fluid animation" src="assets/5%20skrybe/skrybe%20hero.svg" alt="">
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="row">
+                <div class="col-10">
+                    <div class="row">
+                        <div class="title-subpage">Skrybe</div>
+                    </div>
+                    <div class="row">
+                        <div class="description">hero image, icon & logo</div>
+                    </div>
+                    <div class="row">
+                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, culpa
+                            laudantium nemo nihil
+                            officia officiis placeat possimus praesentium repellendus tempora. A aliquid cumque nam
+                            optio provident,
+                            voluptatibus. Dolorum, perferendis provident!
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <img src="assets/5_skrybe/skrybe_icon1.svg" alt="">
+                    <img src="assets/5_skrybe/skrybe_icon2.svg" alt="">
+                    <img src="assets/5_skrybe/skrybe_icon3.svg" alt="">
+                    <img src="assets/5_skrybe/skrybe_icon4.svg" alt="">
+                    <img src="assets/5_skrybe/skrybe_icon5.svg" alt="">
+                </div>
+            </div>
+        </div>
+</div>
