--- a/src/app/portfolio/swist/swist.component.html
+++ b/src/app/portfolio/swist/swist.component.html
@@ -8,16 +8,24 @@
         </div>
         <div class="row">
             <div class="col">
-                <img class="rapee" src="assets/4_swist/swist_latawiec.png" alt="">
+                <div class="image-wrapper">
+                    <img class="img-fluid animation" src="assets/4_swist/swist_latawiec.png" alt="">
+                </div>
             </div>
             <div class="col">
-                <img class="rapee" src="assets/4_swist/swist_uboze.png" alt="">
+                <div class="image-wrapper">
+                    <img class="img-fluid animation" src="assets/4_swist/swist_uboze.png" alt="">
+                </div>
             </div>
             <div class="col">
-                <img class="rapee" src="assets/4_swist/swist_wila.png" alt="">
+                <div class="image-wrapper">
+                    <img class="img-fluid animation" src="assets/4_swist/swist_wila.png" alt="">
+                </div>
             </div>
             <div class="col">
-                <img class="rapee" src="assets/4_swist/swist_jaga.png" alt="">
+                <div class="image-wrapper">
+                    <img class="img-fluid animation" src="assets/4_swist/swist_jaga.png" alt="">
+                </div>
             </div>
         </div>
 
