Poprawa nazewnictwa plików, dodanie kolejnych stron

--- a/src/app/portfolio/skrybe/skrybe.component.html
+++ b/src/app/portfolio/skrybe/skrybe.component.html
@@ -2,7 +2,7 @@
         <div class="col-6">
             <img class="watermark" src="assets/logo.svg" alt="">
             <div class="image-wrapper">
-                <img class="img-fluid animation" src="assets/5%20skrybe/skrybe%20hero.svg" alt="">
+                <img class="img-fluid animation" src="assets/5_skrybe/skrybe_hero.svg" alt="">
             </div>
         </div>
         <div class="col-6">
