--- a/src/styles.css
+++ b/src/styles.css
@@ -1,38 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
-:root{
+:root {
     --text-color: #4A4A4A;
+    --navbar-color: #fff;
+}
 
+body {
+    background-color: #D9D9D9 !important;
 }
-body{
-    background-color: #D9D9D9!important;
-}
+
 .text {
     font-size: 3vh;
     color: var(--text-color);
 }
-.title-subpage{
+
+.title-subpage {
     font-weight: bold;
     font-size: 4vh;
     color: var(--text-color);
 }
+
 .description {
     font-size: 4vh;
     color: var(--text-color);
 }
-.watermark{
+
+.watermark {
     position: absolute;
     max-height: 15vh;
     padding: 3vh;
     filter: opacity(0.6);
 }
-.animation{
+
+.animation {
     transition: transform .3s ease-out;
     overflow: hidden;
 }
-.animation:hover{
+
+.animation:hover {
     transform: rotate(5deg) scale(1.4);
 }
-.image-wrapper{
+
+.image-wrapper {
     overflow: hidden;
 
 }
+
+
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+    background: var(--navbar-color) !important;
+}
+
+
+
