--- a/src/app/portfolio/swist/swist.component.html
+++ b/src/app/portfolio/swist/swist.component.html
@@ -8,22 +8,22 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="image-wrapper">
+                <div class="image-wrapper rapee">
                     <img class="img-fluid animation" src="assets/4_swist/swist_latawiec.png" alt="">
                 </div>
             </div>
             <div class="col">
-                <div class="image-wrapper">
+                <div class="image-wrapper rapee">
                     <img class="img-fluid animation" src="assets/4_swist/swist_uboze.png" alt="">
                 </div>
             </div>
             <div class="col">
-                <div class="image-wrapper">
+                <div class="image-wrapper rapee">
                     <img class="img-fluid animation" src="assets/4_swist/swist_wila.png" alt="">
                 </div>
             </div>
             <div class="col">
-                <div class="image-wrapper">
+                <div class="image-wrapper rapee">
                     <img class="img-fluid animation" src="assets/4_swist/swist_jaga.png" alt="">
                 </div>
             </div>
