--- a/src/app/portfolio/bh1/bh1.component.html
+++ b/src/app/portfolio/bh1/bh1.component.html
@@ -1,35 +1,27 @@
 <div class="row">
-    <div class="col-3">
+    <div class="col span-1-of-5">
         <div class="row">
             <img class="watermark" src="assets/logo.svg" alt="">
         </div>
-        <div class="row text-block" id="bh-logo">
+        <div class="row">
             <img src="assets/2%20bh1/boost%20high%20logo.svg" alt="">
+
         </div>
-        <div class="row text-block">
-            <div class="col">
-                <div class="row">
-                    <div class="title-subpage">BOOST HIGH</div>
-                </div>
-                <div class="row">
-                    <div class="description">logo&brand</div>
-                </div>
-                <div class="row">
-                    <div class="text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam, cum cupiditate eum odit
-                        ullam.
-                        Delectus dicta dolorem facere facilis, fuga, minima molestias nam odit rerum sint tempore
-                        voluptatem
-                        voluptatum?
-                    </div>
-                </div>
-            </div>
+        <div class="row">
+            <div class="title-subpage">BOOST HIGH</div>
+        </div>
+        <div class="row">
+            <div class="description">logo&brand</div>
+        </div>
+        <div class="row text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad et exercitationem quasi
+            reiciendis
+            voluptatibus. Asperiores expedita iste iure maiores porro quam sint. A expedita laboriosam officia quidem
+            quos repellendus tenetur!
         </div>
     </div>
-    <div class="col-9">
+    <div class="col span-4-of-5">
         <div class="image-wrapper">
-
-        <img class="img-fluid animation" id="boosthigh1" src="assets/2%20bh1/boost%20hight%20identity.jpg" alt="">
+            <img class="img-fluid animation" id="boosthigh1" src="assets/2%20bh1/boost%20hight%20identity.jpg" alt="">
         </div>
     </div>
 </div>
