--- a/src/app/portfolio/grafit/grafit.component.css
+++ b/src/app/portfolio/grafit/grafit.component.css
@@ -2,22 +2,44 @@
     /* The image used */
     background-image: url("../../../assets/1_grafit/fire_bg.png");
     /* Full height */
-    height: 100%;
+    height: 100vh;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.grafit-logo {
-    max-height: 20vh;
-    margin: 2vh;
-}
+/*.grafit-logo {*/
+/*    max-height: 20vh;*/
+/*    margin: 2vh;*/
+/*    vertical-align:bottom*/
+/*}*/
 
-.col-6 {
-    padding-left: 7px !important;
-    padding-right: 8px !important;
-}
-.watermark{
+/*.col-6 {*/
+/*    padding-left: 7px !important;*/
+/*    padding-right: 8px !important;*/
+/*}*/
 
+/*.watermark {*/
+
+/*}*/
+
+/*#grafit-wizytowka {*/
+/*    max-width: 50vw;*/
+/*}*/
+/*#grafit-mock{*/
+/*    bottom:100vh;*/
+/*    right: 0;*/
+/*}*/
+
+.grafit-wizytowka {
+    max-width: 50vw;
+}
+.grafit-mock{
+    max-width: 50vw;
+
+}
+.row-bottom{
+    position: absolute;
+    bottom: 0;
 }
