--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -1,39 +1,56 @@
+<!--<div class="bg">-->
+<!--    <div class="row h-100">-->
+<!--        <div class="col-6">-->
+<!--            <img class="watermark" src="assets/logo.svg" alt="">-->
+<!--            <div class="image-wrapper">-->
+<!--                <img class="img-fluid animation" src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-6">-->
+<!--            <div class="row">-->
+<!--                <div class="col-10">-->
+<!--
+<!--                </div>-->
+<!--                <div class="col-2">-->
+<!--                    <img class="grafit-logo" src="assets/1_grafit/logo%20grafit.svg" alt="">-->
+<!--                </div>-->
+
+<!--            </div>-->
+<!--            <div class="row">-->
+
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="bg">
     <div class="row">
-        <div class="col-6">
-            <img class="watermark" src="assets/logo.svg" alt="">
+        <div class="col span-1-of-2">
             <div class="image-wrapper">
-                <img class="img-fluid animation" src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
+                <img class="img-fluid animation grafit-wizytowka" src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg"
+                     alt="">
             </div>
         </div>
-        <div class="col-6">
+        <div class="col span-1-of-2">
             <div class="row">
-                <div class="col-10">
-                    <div class="row">
-                        <div class="title-subpage">GrafIT</div>
-                    </div>
-                    <div class="row">
-                        <div class="description">logo&brand</div>
-                    </div>
-                    <div class="row">
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, culpa
-                            laudantium nemo nihil
-                            officia officiis placeat possimus praesentium repellendus tempora. A aliquid cumque nam
-                            optio provident,
-                            voluptatibus. Dolorum, perferendis provident!
-                        </div>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <img class="grafit-logo" src="assets/1_grafit/logo%20grafit.svg" alt="">
-                </div>
-
+                <div class="title-subpage">GrafIT</div>
             </div>
             <div class="row">
+                <div class="description">logo&brand</div>
+            </div>
+            <div class="row">
+                <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, culpa
+                    laudantium nemo nihil
+                    officia officiis placeat possimus praesentium repellendus tempora. A aliquid cumque nam
+                    optio provident,
+                    voluptatibus. Dolorum, perferendis provident!
+                </div>
+            </div>
+            <div class="row row-bottom">
                 <div class="image-wrapper">
-                    <img class="img-fluid animation" id="grafit-mock" src="assets/1_grafit/grafit%20szyld.jpg" alt="">
+                    <img class="img-fluid animation grafit-mock" src="assets/1_grafit/grafit%20szyld.jpg" alt="">
                 </div>
             </div>
+
         </div>
     </div>
 </div>
