--- a/src/app/portfolio/swist/swist.component.html
+++ b/src/app/portfolio/swist/swist.component.html
@@ -1,41 +1,79 @@
+<!--<div class="row">-->
+<!--    <div class="col-6 ">-->
+<!--        <div class="row">-->
+<!--            <img class="watermark" src="assets/logo.svg" alt="">-->
+<!--        </div>-->
+<!--        <div class="row">-->
+<!--            <img class="logo-swist" src="assets/4_swist/logo_swist.svg" alt="">-->
+<!--        </div>-->
+<!--        <div class="row ">-->
+<!--            <div class="col row-cols-sm-4">-->
+<!--                <div class="image-wrapper rapee">-->
+<!--                    <img class="img-fluid animation" src="assets/4_swist/swist_latawiec.png" alt="">-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col row-cols-sm-4">-->
+<!--                <div class="image-wrapper rapee">-->
+<!--                    <img class="img-fluid animation" src="assets/4_swist/swist_uboze.png" alt="">-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col row-cols-sm-4">-->
+<!--                <div class="image-wrapper rapee">-->
+<!--                    <img class="img-fluid animation" src="assets/4_swist/swist_wila.png" alt="">-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col row-cols-sm-4">-->
+<!--                <div class="image-wrapper rapee">-->
+<!--                    <img class="img-fluid animation" src="assets/4_swist/swist_jaga.png" alt="">-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div class="row"></div>-->
+<!--    </div>-->
+<!--    <div class="col-6 swist-bg">-->
+<!--        <div class="row">-->
+<!--            <div class="text-content">-->
+<!--                <div class="titile-subpage">Świst</div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="row">
-    <div class="col-6">
+    <div class="col span-1-of-2">
         <div class="row">
             <img class="watermark" src="assets/logo.svg" alt="">
         </div>
         <div class="row">
             <img class="logo-swist" src="assets/4_swist/logo_swist.svg" alt="">
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="image-wrapper rapee">
-                    <img class="img-fluid animation" src="assets/4_swist/swist_latawiec.png" alt="">
+            <div class="row">
+                <div class="col span-1-of-4">
+                    <div class="image-wrapper ">
+                        <img class="img-fluid animation rapee" src="assets/4_swist/swist_latawiec.png" alt="">
+                    </div>
+                </div>
+                <div class="col span-1-of-4">
+                    <div class="image-wrapper ">
+                        <img class="img-fluid animation rapee" src="assets/4_swist/swist_uboze.png" alt="">
+                    </div>
+                </div>
+                <div class="col span-1-of-4">
+                    <div class="image-wrapper ">
+                        <img class="img-fluid animation rapee" src="assets/4_swist/swist_wila.png" alt="">
+                    </div>
+                </div>
+                <div class="col span-1-of-4">
+                    <div class="image-wrapper ">
+                        <img class="img-fluid animation rapee" src="assets/4_swist/swist_jaga.png" alt="">
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="image-wrapper rapee">
-                    <img class="img-fluid animation" src="assets/4_swist/swist_uboze.png" alt="">
-                </div>
-            </div>
-            <div class="col">
-                <div class="image-wrapper rapee">
-                    <img class="img-fluid animation" src="assets/4_swist/swist_wila.png" alt="">
-                </div>
-            </div>
-            <div class="col">
-                <div class="image-wrapper rapee">
-                    <img class="img-fluid animation" src="assets/4_swist/swist_jaga.png" alt="">
-                </div>
-            </div>
-        </div>
 
-        <div class="row"></div>
+        </div>
     </div>
-    <div class="col-6 swist-bg">
+    <div class="col span-1-of-2 swist-bg">
         <div class="row">
-            <div class="text-content">
-                <div class="titile-subpage">Świst</div>
-            </div>
+            <div class="titile-subpage">Świst</div>
         </div>
     </div>
 </div>
