--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -1,16 +1,17 @@
 <div class="bg">
     <div class="row">
-        <div class="col-6">
+        <div class="col-xl-6 col-12">
             <img class="watermark" src="assets/logo.svg" alt="">
-            <div class="image-wrapper">
-                <img class="img-fluid animation" src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
+            <div class="image-wrapper wizytowki-mockup">
+                <img class="img-fluid animation " src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-xl-6 col-12">
             <div class="row">
-                <div class="col-10">
+                <div class="col-12">
                     <div class="row">
                         <div class="title-subpage">GrafIT</div>
+                        <img class="grafit-logo" src="assets/1_grafit/logo%20grafit.svg" alt="">
                     </div>
                     <div class="row">
                         <div class="description">logo&brand</div>
@@ -24,16 +25,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2">
-                    <img class="grafit-logo" src="assets/1_grafit/logo%20grafit.svg" alt="">
-                </div>
-
             </div>
             <div class="row">
-                <div class="image-wrapper">
+                <div class="image-wrapper wizytowki-mockup">
                     <img class="img-fluid animation" id="grafit-mock" src="assets/1_grafit/grafit%20szyld.jpg" alt="">
                 </div>
             </div>
         </div>
     </div>
 </div>
+
