--- a/src/app/portfolio/swist/swist.component.html
+++ b/src/app/portfolio/swist/swist.component.html
@@ -7,24 +7,24 @@
             <img class="logo-swist" src="assets/4_swist/logo_swist.svg" alt="">
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-xl-3 col-12">
                 <div class="image-wrapper">
-                    <img class="img-fluid animation" src="assets/4_swist/swist_latawiec.png" alt="">
+                    <img class="img-fluid animation rapee" src="assets/4_swist/swist_latawiec.png" alt="">
                 </div>
             </div>
-            <div class="col">
+            <div class="col-xl-3 col-12">
                 <div class="image-wrapper">
-                    <img class="img-fluid animation" src="assets/4_swist/swist_uboze.png" alt="">
+                    <img class="img-fluid animation rapee" src="assets/4_swist/swist_uboze.png" alt="">
                 </div>
             </div>
-            <div class="col">
+            <div class="col-xl-3 col-12">
                 <div class="image-wrapper">
-                    <img class="img-fluid animation" src="assets/4_swist/swist_wila.png" alt="">
+                    <img class="img-fluid animation rapee" src="assets/4_swist/swist_wila.png" alt="">
                 </div>
             </div>
-            <div class="col">
+            <div class="col-xl-3 col-12">
                 <div class="image-wrapper">
-                    <img class="img-fluid animation" src="assets/4_swist/swist_jaga.png" alt="">
+                    <img class="img-fluid animation rapee" src="assets/4_swist/swist_jaga.png" alt="">
                 </div>
             </div>
         </div>
