--- a/src/app/portfolio/bh1/bh1.component.css
+++ b/src/app/portfolio/bh1/bh1.component.css
@@ -4,24 +4,16 @@
     }
 }
 
-@media all and (max-device-width: 640px){
-    .main-text {
-        font-size: 16px;
-    }
-}
 
-@media all and (max-device-width: 320px) {
-    .main-text {
-        font-size: 12px;
-    }
-}
 #boosthigh1{
     max-height: 100vh;
 }
 .text-block{
-    padding: 2vh;
 }
 #bh-logo{
     margin-top: 15vh;
 
+}
+.watermark{
+    position: absolute;
 }
