--- a/src/app/portfolio/bh1/bh1.component.html
+++ b/src/app/portfolio/bh1/bh1.component.html
@@ -1,35 +1,42 @@
-<div class="row">
-    <div class="col-3">
-        <div class="row">
-            <img class="watermark" src="assets/logo.svg" alt="">
-        </div>
-        <div class="row text-block" id="bh-logo">
-            <img src="assets/2%20bh1/boost%20high%20logo.svg" alt="">
-        </div>
-        <div class="row text-block">
-            <div class="col">
-                <div class="row">
-                    <div class="title-subpage">BOOST HIGH</div>
+<div class="d-none d-sm-block">
+    <div class="row ">
+        <div class="col-3">
+            <div class="row">
+                <img class="watermark" src="assets/logo.svg" alt="">
+                <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam, cum cupiditate eum odit
+                    ullam.
+                    Delectus dicta dolorem facere facilis, fuga, minima molestias nam odit rerum sint tempore
+                    voluptatem
+                    voluptatum?
                 </div>
-                <div class="row">
-                    <div class="description">logo&brand</div>
-                </div>
-                <div class="row">
-                    <div class="text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam, cum cupiditate eum odit
-                        ullam.
-                        Delectus dicta dolorem facere facilis, fuga, minima molestias nam odit rerum sint tempore
-                        voluptatem
-                        voluptatum?
-                    </div>
+            </div>
+        </div>
+        <div class="col-9">
+            <div class="row">
+                <div class="image-wrapper">
+                    <img class="img-fluid animation" id="boosthigh1" src="assets/2%20bh1/boost%20hight%20identity.jpg"
+                         alt="">
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-9">
-        <div class="image-wrapper">
-
-        <img class="img-fluid animation" id="boosthigh1" src="assets/2%20bh1/boost%20hight%20identity.jpg" alt="">
+</div>
+<div class="d-block d-sm-none">
+    <div class="row">
+        <div class="col-12">
+            <div class="image-wrapper">
+                <img class="img-fluid animation" id="boosthigh1" src="assets/2%20bh1/boost%20hight%20identity.jpg"
+                     alt="">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis deserunt
+            dicta
+            dolore eaque eos et ex explicabo fugiat in labore laborum molestias necessitatibus odio
+            placeat,
+            quae, sint suscipit voluptatem voluptates.
         </div>
     </div>
 </div>
