--- a/src/app/portfolio/skrybe/skrybe.component.html
+++ b/src/app/portfolio/skrybe/skrybe.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-        <div class="col-6">
+        <div class="col-xl-6 col-12">
             <img class="watermark" src="assets/logo.svg" alt="">
             <div class="image-wrapper">
                 <img class="img-fluid animation" src="assets/5_skrybe/skrybe_hero.svg" alt="">
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-xl-6 col-12">
             <div class="row">
                 <div class="col-10">
                     <div class="row">
