stylizacja na mobile bootstrap

--- a/src/app/o-mnie/o-mnie.component.html
+++ b/src/app/o-mnie/o-mnie.component.html
@@ -4,7 +4,7 @@
             <img class="watermark" src="assets/logo.svg" alt="">
             <div class="container" class="about-me">
                 <div class="row">
-                    <h2>O mnie</h2>
+                    <h2 class="header-about-me">O mnie</h2>
                 </div>
                 <div class="text text-about-me">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque, eveniet, excepturi incidunt
@@ -15,9 +15,8 @@
         </div>
         <div class="col col-sm">
             <div class="container" class="about-me">
-
                 <div class="row">
-                    <h2>skontaktuj się ze mną</h2>
+                    <h2 class="header-about-me">skontaktuj się ze mną</h2>
                 </div>
                 <div class="text text-about-me">
                     513-738-040
