--- a/src/app/portfolio/swist/swist.component.html
+++ b/src/app/portfolio/swist/swist.component.html
@@ -6,7 +6,7 @@
         <div class="row">
             <img class="logo-swist" src="assets/4_swist/logo_swist.svg" alt="">
         </div>
-        <div class="row">
+        <div class="row image-container">
             <div class="col-xl-3 col-12">
                 <div class="image-wrapper">
                     <img class="img-fluid animation rapee" src="assets/4_swist/swist_latawiec.png" alt="">
