--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -1,10 +1,10 @@
 <div class="bg">
     <div class="row">
         <div class="col-xl-6 col-12">
-            <img class="watermark" src="assets/logo.svg" alt="">
             <div class="image-wrapper wizytowki-mockup">
                 <img class="img-fluid animation " src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
             </div>
+            <img class="watermark" src="assets/logo.svg" alt="">
         </div>
         <div class="col-xl-6 col-12">
             <div class="row">
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="image-wrapper wizytowki-mockup">
+                <div class="image-wrapper office-mockup">
                     <img class="img-fluid animation" id="grafit-mock" src="assets/1_grafit/grafit%20szyld.jpg" alt="">
                 </div>
             </div>
