--- a/src/app/portfolio/bh1/bh1.component.html
+++ b/src/app/portfolio/bh1/bh1.component.html
@@ -1,18 +1,21 @@
-<div class="d-none d-sm-block">
+<div class="d-none d-sm-block bh1-xl">
     <div class="row ">
-        <div class="col-3">
+        <div class="col-xl-3">
             <div class="row">
-                <img class="watermark" src="assets/logo.svg" alt="">
-                <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam, cum cupiditate eum odit
-                    ullam.
-                    Delectus dicta dolorem facere facilis, fuga, minima molestias nam odit rerum sint tempore
-                    voluptatem
-                    voluptatum?
+                <div class="col">
+                    <img class="watermark" src="assets/logo.svg" alt="">
+                    <img class="bh-logo" src="assets/2%20bh1/boost%20high%20logo.svg" alt="">
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam, cum cupiditate eum odit
+                        ullam.
+                        Delectus dicta dolorem facere facilis, fuga, minima molestias nam odit rerum sint tempore
+                        voluptatem
+                        voluptatum?
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-9">
+        <div class="col-xl-9">
             <div class="row">
                 <div class="image-wrapper">
                     <img class="img-fluid animation" id="boosthigh1" src="assets/2%20bh1/boost%20hight%20identity.jpg"
@@ -22,7 +25,12 @@
         </div>
     </div>
 </div>
-<div class="d-block d-sm-none">
+<div class="d-block d-sm-none bh1-sm">
+    <div class="row">
+        <img class="watermark" src="assets/logo.svg" alt="">
+        <img class="bh-logo" src="assets/2%20bh1/boost%20high%20logo.svg" alt="">
+
+    </div>
     <div class="row">
         <div class="col-12">
             <div class="image-wrapper">
