--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -2,27 +2,33 @@
     <div class="row">
         <div class="col-xl-6 col-12">
             <div class="image-wrapper wizytowki-mockup">
-                <img class="img-fluid animation " src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
+                <img class="img-fluid animation img-wizytowki" src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
             </div>
             <img class="watermark" src="assets/logo.svg" alt="">
+            <img class="grafit-logo d-xl-none" src="assets/1_grafit/logo%20grafit.svg" alt="">
         </div>
         <div class="col-xl-6 col-12">
             <div class="row">
                 <div class="col-12">
                     <div class="row">
                         <div class="title-subpage">GrafIT</div>
-                        <img class="grafit-logo" src="assets/1_grafit/logo%20grafit.svg" alt="">
                     </div>
                     <div class="row">
                         <div class="description">logo&brand</div>
                     </div>
                     <div class="row">
+                        <div class="col-xl-9 ">
                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, culpa
                             laudantium nemo nihil
                             officia officiis placeat possimus praesentium repellendus tempora. A aliquid cumque nam
                             optio provident,
                             voluptatibus. Dolorum, perferendis provident!
                         </div>
+                        </div>
+                        <div class="col-xl-3 d-none d-xl-block">
+                            <img class="grafit-logo" src="assets/1_grafit/logo%20grafit.svg" alt="">
+                        </div>
+
                     </div>
                 </div>
             </div>
