--- a/src/app/portfolio/bh2/bh2.component.html
+++ b/src/app/portfolio/bh2/bh2.component.html
@@ -41,6 +41,9 @@
 </div>
 <div class="d-block d-sm-none">
     <div class="row">
+        <img class="watermark" src="assets/logo.svg" alt="">
+    </div>
+    <div class="row">
         <div class="col-4">
             <div class="image-wrapper">
                 <img class="koszulka img-fluid animation" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">
