--- a/src/app/o-mnie/o-mnie.component.html
+++ b/src/app/o-mnie/o-mnie.component.html
@@ -7,9 +7,12 @@
                     <h2 class="header-about-me">O mnie</h2>
                 </div>
                 <div class="text text-about-me">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque, eveniet, excepturi incidunt
-                        iure minima nobis nulla quasi repellendus reprehenderit similique sint voluptates voluptatum.
-                        Consectetur, eius similique! Debitis, dicta, necessitatibus?</p>
+                    <p>I am Klaudia Szumacher a graphic designer and painter. My vast variety of skills is continuously
+                        expanding. I am passionate about creating products with a strong visual identity. It helps
+                        brands and companies move to the next level and increase user engagement. I am not afraid to be
+                        innovative, precise, take advantage of new technologies and push the boundaries of design.
+                        As they say:
+                        <strong>The devil is in pixels.</strong></p>
                 </div>
             </div>
         </div>
