--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,4 +1,12 @@
 <div fullpage id="fullpage" [options]="config" (ref)="getRef($event)" #fullpageRef>
+<!--    <div class="section">-->
+<!--        <div class="slide" data-anchor="slide1">-->
+<!--            <app-dashboard></app-dashboard>-->
+<!--        </div>-->
+<!--        <div class="slide" data-anchor="art">-->
+<!--            <app-art></app-art>-->
+<!--        </div>-->
+<!--    </div>-->
     <div class="section">
         <app-dashboard></app-dashboard>
     </div>
