--- a/src/app/portfolio/bh2/bh2.component.html
+++ b/src/app/portfolio/bh2/bh2.component.html
@@ -2,11 +2,10 @@
     <div class="row ">
         <div class="col">
             <div class="row">
-                <div class="image-wrapper">
+                <div class="image-wrapper czarna">
                     <img class="koszulka img-fluid animation" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">
                 </div>
-                <img class="watermark" src="assets/logo.svg" alt="">
-
+                <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
             </div>
         </div>
         <div class="col">
@@ -41,7 +40,7 @@
 </div>
 <div class="d-block d-sm-none">
     <div class="row">
-        <img class="watermark" src="assets/logo.svg" alt="">
+        <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
     </div>
     <div class="row">
         <div class="col-4">
