--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 :root {
     --text-color: #4A4A4A;
     --navbar-color: #fff;
+    --watermark-base: #3d3030;
+    --watermark-base-bright: #fff;
 }
 
 body {
