--- a/src/app/portfolio/bh1/bh1.component.html
+++ b/src/app/portfolio/bh1/bh1.component.html
@@ -4,7 +4,6 @@
             <div class="row">
                 <div class="col">
                     <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
-<!--                    <img class="watermark" src="assets/logo.svg" alt="">-->
                     <img class="bh-logo" src="assets/2%20bh1/boost%20high%20logo.svg" alt="">
                     <div class="text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam, cum cupiditate eum odit
@@ -28,7 +27,7 @@
 </div>
 <div class="d-block d-sm-none bh1-sm">
     <div class="row">
-        <img class="watermark" src="assets/logo.svg" alt="">
+        <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
         <img class="bh-logo" src="assets/2%20bh1/boost%20high%20logo.svg" alt="">
 
     </div>
