--- a/src/app/portfolio/gaia-tree/gaia-tree.component.html
+++ b/src/app/portfolio/gaia-tree/gaia-tree.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-5">
-        <img class="watermark" src="assets/logo.svg" alt="">
+        <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
         <div class="row">
             <div class="col">
                 <div class="image-wrapper">
