--- a/src/app/portfolio/skrybe/skrybe.component.html
+++ b/src/app/portfolio/skrybe/skrybe.component.html
@@ -1,6 +1,6 @@
 <div class="row">
         <div class="col-xl-6 col-12">
-            <img class="watermark" src="assets/logo.svg" alt="">
+            <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
             <div class="image-wrapper hero">
                 <img class="img-fluid animation" src="assets/5_skrybe/skrybe_hero.svg" alt="">
             </div>
