--- a/src/app/portfolio/swist/swist.component.html
+++ b/src/app/portfolio/swist/swist.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-6">
         <div class="row">
-            <img class="watermark" src="assets/logo.svg" alt="">
+            <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
         </div>
         <div class="row">
             <img class="logo-swist" src="assets/4_swist/logo_swist.svg" alt="">
