--- a/src/app/o-mnie/o-mnie.component.html
+++ b/src/app/o-mnie/o-mnie.component.html
@@ -12,7 +12,7 @@
                         brands and companies move to the next level and increase user engagement. I am not afraid to be
                         innovative, precise, take advantage of new technologies and push the boundaries of design.
                         As they say:
-                        <strong>The devil is in pixels.</strong></p>
+                       <br><strong>The devil is in pixels.</strong></p>
                 </div>
             </div>
         </div>
