--- a/src/app/portfolio/bh1/bh1.component.html
+++ b/src/app/portfolio/bh1/bh1.component.html
@@ -3,14 +3,12 @@
         <div class="col-xl-3">
             <div class="row">
                 <div class="col">
-                    <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
+                    <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
                     <img class="bh-logo" src="assets/2%20bh1/boost%20high%20logo.svg" alt="">
                     <div class="text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aliquam, cum cupiditate eum odit
-                        ullam.
-                        Delectus dicta dolorem facere facilis, fuga, minima molestias nam odit rerum sint tempore
-                        voluptatem
-                        voluptatum?
+                        With Boost High company, that works at IT market I am bounded for a longer period of time.
+                        Beginning our cooperation with logo and stationery projects, I also created avatar and
+                        infographics. Additionaly I won a competition for t-shirt graphic for the very same company.
                     </div>
                 </div>
             </div>
@@ -18,7 +16,7 @@
         <div class="col-xl-9">
             <div class="row">
                 <div class="image-wrapper">
-                    <img class="img-fluid animation" id="boosthigh1" src="assets/2%20bh1/boost%20hight%20identity.jpg"
+                    <img class="img-fluid animation" id="boosthigh1" src="assets/2%20bh1/boost_high_identity.png"
                          alt="">
                 </div>
             </div>
@@ -27,7 +25,7 @@
 </div>
 <div class="d-block d-sm-none bh1-sm">
     <div class="row">
-        <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
+        <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
         <img class="bh-logo" src="assets/2%20bh1/boost%20high%20logo.svg" alt="">
 
     </div>
@@ -40,11 +38,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis deserunt
-            dicta
-            dolore eaque eos et ex explicabo fugiat in labore laborum molestias necessitatibus odio
-            placeat,
-            quae, sint suscipit voluptatem voluptates.
+        <div class="text">With Boost High company, that works at IT market I am bounded for a longer period of time.
+            Beginning our cooperation with logo and stationery projects, I also created avatar and infographics.
+            Additionaly I won a competition for t-shirt graphic for the very same company.
         </div>
     </div>
 </div>
