--- a/src/app/portfolio/galeria/galeria.component.html
+++ b/src/app/portfolio/galeria/galeria.component.html
@@ -1,3 +1,7 @@
-<p>
-  galeria works!
-</p>
+<div class="row">
+    <div class="text">My first website
+
+        While creating the very first website I was using the Wordpress software. It was my private site, through which
+        in a short period of time I started to sell my paintings.
+    </div>
+</div>
