--- a/src/app/portfolio/skrybe/skrybe.component.html
+++ b/src/app/portfolio/skrybe/skrybe.component.html
@@ -1,35 +1,35 @@
 <div class="row">
-        <div class="col-xl-6 col-12">
-            <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
-            <div class="image-wrapper hero">
-                <img class="img-fluid animation" src="assets/5_skrybe/skrybe_hero.svg" alt="">
-            </div>
+    <div class="col-xl-6 col-12">
+        <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
+        <div class="image-wrapper hero">
+            <img class="img-fluid animation" src="assets/5_skrybe/skrybe_hero.svg" alt="">
         </div>
-        <div class="col-xl-6 col-12">
-            <div class="row text-container">
-                <div class="col-10">
-                    <div class="row">
-                        <div class="title-subpage">Skrybe</div>
-                    </div>
-                    <div class="row">
-                        <div class="description">hero image, icon & logo</div>
-                    </div>
-                    <div class="row">
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, culpa
-                            laudantium nemo nihil
-                            officia officiis placeat possimus praesentium repellendus tempora. A aliquid cumque nam
-                            optio provident,
-                            voluptatibus. Dolorum, perferendis provident!
-                        </div>
+    </div>
+    <div class="col-xl-6 col-12">
+        <div class="row text-container">
+            <div class="col-7">
+                <div class="row">
+                    <div class="title-subpage">Skrybe</div>
+                </div>
+                <div class="row">
+                    <div class="description">hero image, icon & logo</div>
+                </div>
+                <div class="row">
+                    <div class="text">Skrybe app by Thomas Jamróg helps to systematize whole range of notes on any
+                        subject. The inventor’s request was to create simple, light and readable logo, hero image and
+                        icons. I based this desing on sketches, matching it with app’s character.
                     </div>
                 </div>
-                <div class="col-2">
-                    <img src="assets/5_skrybe/skrybe_icon1.svg" alt="">
-                    <img src="assets/5_skrybe/skrybe_icon2.svg" alt="">
-                    <img src="assets/5_skrybe/skrybe_icon3.svg" alt="">
-                    <img src="assets/5_skrybe/skrybe_icon4.svg" alt="">
-                    <img src="assets/5_skrybe/skrybe_icon5.svg" alt="">
-                </div>
             </div>
+            <div class="col-4 icons">
+                <img class="icon" src="assets/5_skrybe/skrybe_icon1.svg" alt="">
+                <img class="icon" src="assets/5_skrybe/skrybe_icon2.svg" alt="">
+                <img class="icon" src="assets/5_skrybe/skrybe_icon3.svg" alt="">
+                <img class="icon" src="assets/5_skrybe/skrybe_icon4.svg" alt="">
+                <img class="icon" src="assets/5_skrybe/skrybe_icon5.svg" alt="">
+                <img class="icon" src="assets/5_skrybe/skrybe_icon6.svg" alt="">
+            </div>
+            <div class="col-1"></div>
         </div>
+    </div>
 </div>
