--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div class="d-none d-xl-block">
+    <router-outlet></router-outlet>
+</div>
+<div class="d-xl-none">
+    <div class="mobile-bg">
+        <div class="d-flex justify-content-center">
+            <p style="position:absolute; bottom:0; color: #fff; font-family: Real">Please, open website on your desktop or laptop.</p>
+        </div>
+    </div>
+</div>
