--- a/src/app/portfolio/bh2/bh2.component.html
+++ b/src/app/portfolio/bh2/bh2.component.html
@@ -1,16 +1,16 @@
 <div class="d-none d-sm-block">
-    <div class="row ">
+    <div class="row full">
         <div class="col">
             <div class="row">
                 <div class="image-wrapper czarna">
                     <img class="koszulka img-fluid animation" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">
                 </div>
-                <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
+                <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
             </div>
         </div>
         <div class="col">
             <div class="row">
-                <img class="koszulka" src="assets/3%20bh2/scrum.svg" alt="">
+                <img class="scrum" src="assets/3%20bh2/scrum.svg" alt="">
             </div>
             <div class="row">
                 <div class="col">
@@ -21,11 +21,8 @@
                         <div class="description">logo&brand</div>
                     </div>
                     <div class="row">
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis deserunt
-                            dicta
-                            dolore eaque eos et ex explicabo fugiat in labore laborum molestias necessitatibus odio
-                            placeat,
-                            quae, sint suscipit voluptatem voluptates.
+                        <div class="text">The winning design shows a humoristic version of an agile scrum process. It
+                            decorates Boost High employee’s hoodies.
                         </div>
                     </div>
                 </div>
@@ -40,7 +37,7 @@
 </div>
 <div class="d-block d-sm-none">
     <div class="row">
-        <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
+        <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
     </div>
     <div class="row">
         <div class="col-4">
