--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -1,11 +1,11 @@
 <div class="bg">
     <div class="row">
         <div class="col-xl-6 col-12">
-            <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
+            <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
             <div class="image-wrapper wizytowki-mockup">
                 <img class="img-fluid animation img-wizytowki" src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
             </div>
-<!--            <img class="watermark" src="assets/logo.svg" alt="">-->
+            <!--            <img class="watermark" src="assets/logo.svg" alt="">-->
             <img class="grafit-logo d-xl-none" src="assets/1_grafit/logo%20grafit.svg" alt="">
         </div>
         <div class="col-xl-6 col-12">
@@ -19,12 +19,11 @@
                     </div>
                     <div class="row">
                         <div class="col-xl-9 ">
-                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, culpa
-                            laudantium nemo nihil
-                            officia officiis placeat possimus praesentium repellendus tempora. A aliquid cumque nam
-                            optio provident,
-                            voluptatibus. Dolorum, perferendis provident!
-                        </div>
+                            <div class="text">I have started cooperation with GrafIT brand from the very beginning,
+                                including invention of brand’s name. I created the name basing on programmers jargon and
+                                reffering to ‘brilliant code’. I also planned company’s color, logo and business cards.
+                                As an addition to whole set I designed signboard for GrafIT’s potential headquarters.
+                            </div>
                         </div>
                         <div class="col-xl-3 d-none d-xl-block">
                             <img class="grafit-logo" src="assets/1_grafit/logo%20grafit.svg" alt="">
