--- a/src/app/portfolio/skrybe/skrybe.component.css
+++ b/src/app/portfolio/skrybe/skrybe.component.css
@@ -1,11 +1,23 @@
-@media all and (min-device-width: 1120px){
-    .col-xl-6{
+@media all and (min-device-width: 1120px) {
+    .col-xl-6 {
         height: 100vh;
     }
-    .hero{
+
+    .hero {
+        margin-top: 5vh;
+    }
+
+    .text-container {
         margin-top: 15vh;
     }
-    .text-container{
-        margin-top: 15vh;
+
+    .icons {
+        position: absolute;
+        top: 5%;
+        right: 0;
+    }
+
+    .icon {
+        height: 15vh
     }
 }
