--- a/src/app/portfolio/swist/swist.component.css
+++ b/src/app/portfolio/swist/swist.component.css
@@ -24,8 +24,17 @@
     padding: 25vh;
 }
 .image-container{
-    margin-top: 20vh;
+    margin-top: 70vh;
     margin-left: 3vw;
+    opacity: 1;
+    /*animation: wjazd 5s ease-in 3s forwards;*/
+    transition: 1.5s margin-top ease-in-out , 0.1s opacity ease-in-out;
+}
+.image-container.fromButtom{
+    margin-top: 28vh;
+}
+.blind{
+    opacity: 0;
 }
 @media all and (max-device-width: 640px) {
     .image-container{
@@ -34,5 +43,16 @@
     }
     .watermark{
         margin: 2% 0 0 10%;
+    }
+}
+@-webkit-keyframes wjazd {
+    form {
+        opacity: 0;
+        margin-top: 35vh;
+
+    }
+    to {
+        margin-top: 28vh;
+        opacity: 1;
     }
 }
