Wstrzymanie wersji mobilnej.

--- a/src/app/o-mnie/o-mnie.component.html
+++ b/src/app/o-mnie/o-mnie.component.html
@@ -1,7 +1,7 @@
 <div class="about-me-bg">
     <div class="row">
         <div class="col col-sm">
-            <svg-icon [svgStyle]="watermarkStyle"  src="assets/logo.svg"></svg-icon>
+            <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
             <div class="container" class="about-me">
                 <div class="row">
                     <h2 class="header-about-me">O mnie</h2>
@@ -11,8 +11,10 @@
                         expanding. I am passionate about creating products with a strong visual identity. It helps
                         brands and companies move to the next level and increase user engagement. I am not afraid to be
                         innovative, precise, take advantage of new technologies and push the boundaries of design.
-                        As they say:
-                       <br><strong>The devil is in pixels.</strong></p>
+                        As they say:</p>
+                    <div class="d-flex justify-content-center">
+                        <strong>The devil is in pixels.</strong>
+                    </div>
                 </div>
             </div>
         </div>
