--- a/src/app/portfolio/galeria/galeria.component.html
+++ b/src/app/portfolio/galeria/galeria.component.html
@@ -1,7 +1,24 @@
 <div class="row">
-    <div class="text">My first website
-
-        While creating the very first website I was using the Wordpress software. It was my private site, through which
-        in a short period of time I started to sell my paintings.
+    <div class="col-4">
+        <div class="bg-gallery">
+            <div class="row">
+                <div class="col">
+                    <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
+                    <div class="title-subpage">Painting gallery</div>
+                    <div class="text">My first website
+                        while creating the very first website I was using the Wordpress software. It was my private
+                        site,
+                        through
+                        which
+                        in a short period of time I started to sell my paintings.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-8">
+        <div class="image-wrapper wizytowki-mockup">
+            <img class="img-fluid animation img-full " src="assets/8_galeria_portfolio/web%20site.png" alt="">
+        </div>
     </div>
 </div>
