--- a/src/app/portfolio/swist/swist.component.css
+++ b/src/app/portfolio/swist/swist.component.css
@@ -1,4 +1,4 @@
-.swist-bg{
+.swist-bg {
 
     /* The image used */
     background-image: url("../../../assets/4_swist/swist_bg.png");
@@ -10,41 +10,49 @@
     background-size: cover;
 
 }
-.logo-swist{
+
+.logo-swist {
     max-width: 33vw;
     margin-top: 15vh;
     margin-left: 9vw;
 }
 
-.rapee{
-    float:left;
+.rapee {
+    float: left;
     max-width: 16vh;
 }
-.text-content{
+
+.text-content {
     padding: 25vh;
 }
-.image-container{
+
+.image-container {
     margin-top: 70vh;
     margin-left: 3vw;
     opacity: 1;
     /*animation: wjazd 5s ease-in 3s forwards;*/
-    transition: 1.5s margin-top ease-in-out , 0.1s opacity ease-in-out;
+    transition: 1.5s margin-top ease-in-out, 0.1s opacity ease-in-out;
 }
-.image-container.fromButtom{
+
+.image-container.fromButtom {
     margin-top: 28vh;
 }
-.blind{
+
+.blind {
     opacity: 0;
 }
+
 @media all and (max-device-width: 640px) {
-    .image-container{
+    .image-container {
         margin-top: 15%;
         margin-left: 12%;
     }
-    .watermark{
+
+    .watermark {
         margin: 2% 0 0 10%;
     }
 }
+
 @-webkit-keyframes wjazd {
     form {
         opacity: 0;
@@ -55,4 +63,20 @@
         margin-top: 28vh;
         opacity: 1;
     }
+}
+
+.title-subpage {
+    margin-left: 15%;
+    margin-top: 20%;
+}
+
+.description {
+    margin-left: 15%;
+
+}
+
+.text {
+    margin-left: 15%;
+    max-width: 70%;
+    margin-top: 5%;
 }
