--- a/src/app/portfolio/swist/swist.component.html
+++ b/src/app/portfolio/swist/swist.component.html
@@ -33,9 +33,10 @@
     </div>
     <div class="col-6 swist-bg">
         <div class="row">
-            <div class="text-content">
-                <div class="titile-subpage">Świst</div>
+                <div class="title-subpage">Świst</div>
             </div>
+        <div class="row">
+            <div class="description">logo&packing</div>
         </div>
         <div class="row">
             <div class="text">Świst brand makes polish rapee and it also uses logo created by me. Upon the client’s
