--- a/src/app/portfolio/bh2/bh2.component.html
+++ b/src/app/portfolio/bh2/bh2.component.html
@@ -13,7 +13,8 @@
                 <img class="scrum" src="assets/3%20bh2/scrum.svg" alt="">
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-2"></div>
+                <div class="col-9">
                     <div class="row">
                         <div class="title-subpage">BOOST HIGH</div>
                     </div>
@@ -26,6 +27,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-1"></div>
             </div>
         </div>
         <div class="col">
