--- a/src/app/portfolio/gaia-tree/gaia-tree.component.html
+++ b/src/app/portfolio/gaia-tree/gaia-tree.component.html
@@ -13,7 +13,7 @@
         <div class="gaia-bg"></div>
     </div>
     <div class="col-5">
-        <div class="row">
+        <div class="row gaia-desc">
             <div class="col">
                 <div class="row">
                     <div class="title-subpage">GaiaTree</div>
